kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-container
        image: 577805407081.dkr.ecr.us-east-1.amazonaws.com/production/project-2-eks-devops:latest
        ports:
        - containerPort: 5000
